--- a/RunningWater.Android/RunningWater.Android.csproj
+++ b/RunningWater.Android/RunningWater.Android.csproj
@@ -55,8 +55,8 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
-    <PackageReference Include="Plugin.BLE">
-      <Version>2.1.2</Version>
+    <PackageReference Include="Shiny.BluetoothLE">
+      <Version>2.4.3.3003</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
