--- a/RunningWater.Raspberry/RunningWater.Raspberry.csproj
+++ b/RunningWater.Raspberry/RunningWater.Raspberry.csproj
@@ -3,13 +3,38 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-	<RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+	  <RuntimeIdentifiers>linux-arm;osx-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotnetBleServer" Version="0.1.0-snapshot" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
+    <PackageReference Include="Hangfire.Core" Version="1.7.28" />
+    <PackageReference Include="Hangfire.LiteDB" Version="0.4.1" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.28" />
+    <PackageReference Include="Hangfire" Version="1.7.28" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Hangfire.MemoryStorage" />
+    <None Remove="Hangfire" />
+    <None Remove="Hangfire.Core" />
+    <None Remove="Hangfire.LiteDB" />
+    <None Remove="Hangfire.InMemory" />
+    <None Remove="ncrontab" />
+    <None Remove="Attributes\" />
+    <None Remove="Hangfire.AspNetCore" />
+    <None Remove="Plugin.BluetoothLE" />
+    <None Remove="Shiny.BluetoothLE" />
+    <None Remove="Microsoft.Extensions.Logging" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
