--- a/RunningWater.iOS/RunningWater.iOS.csproj
+++ b/RunningWater.iOS/RunningWater.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sources\PlatformBluetooth.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -125,8 +126,8 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
-    <PackageReference Include="Plugin.BLE">
-      <Version>2.1.2</Version>
+    <PackageReference Include="Shiny.BluetoothLE">
+      <Version>2.4.3.3003</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -135,5 +136,8 @@
       <Project>{9ED7C664-E0AE-4E36-AFE5-681CC92A3447}</Project>
       <Name>RunningWater</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sources\" />
   </ItemGroup>
 </Project>
