--- a/RunningWater.Raspberry/RunningWater.Raspberry.csproj
+++ b/RunningWater.Raspberry/RunningWater.Raspberry.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Hangfire.LiteDB" Version="0.4.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.28" />
     <PackageReference Include="Hangfire" Version="1.7.28" />
+    <PackageReference Include="ncrontab" Version="3.3.1" />
   </ItemGroup>
 
   <ItemGroup>
