--- a/RunningWater.Raspberry/RunningWater.Raspberry.csproj
+++ b/RunningWater.Raspberry/RunningWater.Raspberry.csproj
@@ -2,19 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	  <RuntimeIdentifiers>linux-arm;osx-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotnetBleServer" Version="0.1.0-snapshot" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Hangfire.Core" Version="1.7.28" />
-    <PackageReference Include="Hangfire.LiteDB" Version="0.4.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.28" />
     <PackageReference Include="Hangfire" Version="1.7.28" />
-    <PackageReference Include="ncrontab" Version="3.3.1" />
+    <PackageReference Include="DotnetBleServer" Version="0.1.0-snapshot" />
+    <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,9 +28,12 @@
     <None Remove="Plugin.BluetoothLE" />
     <None Remove="Shiny.BluetoothLE" />
     <None Remove="Microsoft.Extensions.Logging" />
+    <None Remove="DotnetBleServer" />
+    <None Remove="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Attributes\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
