--- a/RunningWater.iOS/RunningWater.iOS.csproj
+++ b/RunningWater.iOS/RunningWater.iOS.csproj
@@ -126,8 +126,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
-    <PackageReference Include="Shiny.BluetoothLE">
-      <Version>2.4.3.3003</Version>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Plugin.BLE">
+      <Version>2.2.0-pre2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
