--- a/RunningWater.iOS/RunningWater.iOS.csproj
+++ b/RunningWater.iOS/RunningWater.iOS.csproj
@@ -137,6 +137,12 @@
     <PackageReference Include="Plugin.BLE">
       <Version>2.2.0-pre2</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.CommunityToolkit">
+      <Version>2.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
